language selector is almost working, but the correctWord seems to be one language choice behind and the boxes don't refresh when the language is changed

--- a/src/Game/Game.css
+++ b/src/Game/Game.css
@@ -13,3 +13,7 @@
   background-color: black;
   color: white;
 }
+
+.language-selector {
+  pointer-events: all;
+}
